Fix line-wrapping for code

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,3 +2,4 @@
 .lichtdoos_afb { display: inline; }
 .lichtdoos_subtitle { text-align: center; font-style: italic; font-size: 0.8em; margin-top: 0px; }
 .header-title a { text-decoration: none; }
+code { white-space : pre-wrap !important; }
